--- a/htmls/AR.html
+++ b/htmls/AR.html
@@ -1,56 +1,51 @@
-html
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8"><a-entity sound="src: #som; autoplay:true; loop:true" ></a-entity>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiro AR</title>
-    <!-- A-Frame itself -->
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/three.js/build/ar-threex-location-only.js'></script>
-    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js'></script>
-
-</head>https://www.youtube.com/watch?v=dQw4w9WgXcQ
+    <script src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar.js"></script>
+</head>
 <body style="margin:0px; overflow: hidden;">
-    <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled:false">
-
+    <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false">
         <a-assets>
             <video id="never" src="../assets/never.mp4" autoplay loop></video>
-            <img id="sete" src="../assets/001.png"/>
         </a-assets>
 
-        <a-marker present="hiro" controlador>
-            <a-video width="1.5" height="2" rotation="-90 0 0" position="0 0 0" src="#never"></a-video>
+        <a-marker preset="hiro" controlador>
+            <a-video 
+                width="1.5" 
+                height="2" 
+                rotation="-90 0 0" 
+                position="0 0 0" 
+                src="#never">
+            </a-video>
         </a-marker>
 
-        <a-entity camera="">
-
-        </a-entity>
+        <a-entity camera></a-entity>
     </a-scene>
 
     <script>
         // Aguardando a interação do usuário
-        AFRAME.registerComponent(
-            'controlador', {
-                init: function(){
-                    this.toggle = false;
-                    this.vid=document.querySelector("#never");
-                    this.vid.pause();
-                },
-                tick: function(){
-                    if (this.el.object3D.visible == true){
-                        if(!this.toggle){
-                            this.toggle = true;
-                            this.vid.play();
-                        }else{
-                            this.toggle = false;
-                            this.vid.pause();
-                        }
+        AFRAME.registerComponent('controlador', {
+            init: function () {
+                this.toggle = false;
+                this.vid = document.querySelector("#never");
+                this.vid.pause();
+            },
+            tick: function () {
+                if (this.el.object3D.visible) {
+                    if (!this.toggle) {
+                        this.toggle = true;
+                        this.vid.play();
+                    } else {
+                        this.toggle = false;
+                        this.vid.pause();
                     }
                 }
             }
-        );
-       
-      </script>
+        });
+    </script>
 </body>
 </html>
